# kamus

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  kamus.desktop.in
src/: Makefile.am  app-menu.ui  app.vala  config.vapi  dictionary.vala  resources.xml  window.ui  window.vala
src/dicts/: en-id.dict
